--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
 }
 
 body {
-	background-color: black;
+	background-image: url(Background.png);
+	width: absolute;
 }
 
 .content {
@@ -19,7 +20,6 @@ body {
 	height: absolute;
 	padding: 10px;
 	font-family: 'Bowlby One SC', cursive;
-	animation: fadeIn 1.5s;
 }
 
 .head {
@@ -42,6 +42,7 @@ body {
 	font-family: 'Lobster', cursive;
 	transition: 1.5s ease-in-out;
 	animation: fadeIn 1.5s;
+	
 }
 
 .logo {
@@ -50,3 +51,6 @@ body {
 
 }
 
+.paragraphs {
+animation: fadeIn 1.5s;
+}
